on avance sur l aleatoire

--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@ body
 	width : 70%;
 	height : 40%;
 	border : 3px solid gray;
-	margin-top : 3%;
+	margin-top : 1%;
+	padding : 2%;
 	background-color : white;
+	font-size : 2em;
 }
 
 .choixBouton
