--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body
 	width : 100%;
 	text-align : center;
 	background-image : url("img/fond.jpeg");
+	/*background-image : url("img/fond2.jpg");*/
 	background-size : cover;
 	background-attachment : fixed;
 }
@@ -16,11 +17,14 @@ body
 .ecran
 {
 	display : inline-block;
-	border : 3px solid black;
-	background-color : lightblue;
-	width : 85%;
+	border : 6px solid grey;
+	background-color : black;
+	width : 80%;
 	height : 78%;
+	background-color : #00BFFF;
+	
 	text-align : center;
+	margin-top : 2%;
 }
 
 .affText
@@ -30,11 +34,10 @@ body
 	width : 70%;
 	height : 40%;
 	border : 3px solid gray;
-	margin-top : 1%;
+	margin-top : 2%;
 	padding : 2%;
 	background-color : white;
 	font-size : 2em;
-	overflow: scroll;
 }
 
 .choixBouton
@@ -62,5 +65,6 @@ body
 	text-align : left;
 	white-space:nowrap;
 	font-size : 0.7em;
+	overflow: scroll;
 	
 }
